--- a/index.html
+++ b/index.html
@@ -1,122 +1,119 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<meta charset="UTF-8" />
-	<title>
-		CS6630 Project: Global Earthquake Visualization
-	</title>
-	<link rel="stylesheet" href="lib/leaflet/leaflet.css" />
-	<script src="lib/leaflet/leaflet.js"></script>
-	<script src="lib/d3.v5.js"></script>
-	<style>
-		#map {
-			width: 800px;
-			height: 600px;
-		}
+<title></title>
+<link rel="stylesheet" href="lib/leaflet/leaflet.css"/>
+<script src="lib/leaflet/leaflet.js"></script>
+<script src="lib/d3.v5.js"></script>
+<style>
+input {
+	width: 100px;
+}
+#map {
+	width: 800px;
+	height: 600px;
+}
+.fixed_svg {
+	position: absolute;
+	top: 0;
+	left: 0;
+	cursor: move;
+	/*cursor: grab;*/
+}
+.point {
+	fill: #ff7800;
+	opacity: 0.8;
+	stroke: #666;
+	stroke-width: 0.2;
+	cursor: pointer;
+}
+#infobox {
+	width: 200px;
+    height: 300px;
+    border-radius: 5px;
+    border: solid 1px #666;
+    position: absolute;
+    left: 820px;
+    top: 68px;
+    padding: 20px;
+    line-height: 32px;
+}
 
-		.fixed_svg {
-			position: absolute;
-			top: 0;
-			left: 0;
-			cursor: move;
-			/*cursor: grab;*/
-		}
+html, body {
+	height: 100%;
+	margin: 0;
+}
+table {
+	border-collapse: collapse;
+}
+tr {
+	height: 30px;
+    font-size: 14px;
+    line-height: 0;
+}
+th {
+	font-weight: 800;
+}
+td {
+    font-weight: normal;
+}
 
-		.point {
-			fill: #ff7800;
-			fill-opacity: 0.5;
-			stroke: #697e8d;
-			stroke-width: 0;
-			cursor: pointer;
-		}
-
-		html, body {
-			height: 100%;
-			margin: 0;
-		}
-
-		table {
-			border-collapse: collapse;
-		}
-
-		tr {
-			height: 30px;
-			font-size: 14px;
-			line-height: 0;
-		}
-
-		th {
-			font-weight: 800;
-		}
-
-		td {
-			font-weight: normal;
-		}
-
-		#table_wrapper {
-			width: 800px;
-			margin-top: 30px;
-			display: none;
-		}
-
-		#table {
-			width: 706px;
-			margin: 0 auto;
-		}
-
-		.YEAR {
-			/*font-weight: 800;*/
-			text-align: left;
-			min-width: 80px;
-		}
-
-		.DAMAGE {
-			text-align: center;
-			min-width: 500px;
-		}
-
-		.TOTAL_DAMAGE_MILLIONS_DOLLARS {
-			text-align: right;
-			min-width: 80px;
-		}
-	</style>
+#table_wrapper {
+	width: 800px;
+	margin-top: 30px;
+	display: none;
+}
+#table {
+	width: 706px;
+	margin: 0 auto;
+}
+.YEAR {
+    /*font-weight: 800;*/
+    text-align: left;
+    min-width: 80px;
+}
+.DAMAGE {
+	text-align: center;
+	min-width: 500px;
+}
+.TOTAL_DAMAGE_MILLIONS_DOLLARS {
+	text-align: right;
+	min-width: 80px;
+}
+</style>
 </head>
 <body>
-	<h3>CS6630 Project: Global Earthquake Visualization</h3>
-	<address>
-		<span>Name: Yu Song</span>
-		<span>Email: songyu.suzhou@gmail.com / u0857568@utah.edu</span>
-		<span>UID: u0857568</span><br />
-		<span>Name: Kailing Fu</span>
-		<span>Email: u1327581@utah.edu</span>
-		<span>UID: u1327581</span>
-	</address>
-	<br />
-	<hr />
-	<br />
+<div>
+	Year:&nbsp
+	<input id=sel-year-start type="text" />
+	<input id=sel-year-end type="text" />
+</div>
+<div>
+	EQ-Primary:&nbsp
+	<input id=sel-eqprimary-start type="text" />
+	<input id=sel-eqprimary-end type="text" />
+</div>
+<button id="sel-btn">Select</button>
+<div id="map"></div>
+<div id="infobox"></div>
+<!-- <div id="table_wrapper">
+	<div id="table"><table>
+		<thead>
+			<tr>
+				<th style="text-align: left; min-width: 80px;">Year</th>
+				<th style="text-align: center; min-width: 500px;"><svg id="headersvg" height="50" width="400"></svg>
+				</th>
+				<th style="text-align: right; min-width: 80px;">Total Damage (M)</th>
+			</tr>
+		</thead>
+		<tbody id="detailTableBody">
+		</tbody>
+	</table></div>
+</div> -->
+<script src="js/map.js"></script>
+<script src="js/table.js"></script>
+<script type="text/javascript">
 
-	<div id="map"></div>
-	<div id="table_wrapper">
-		<div id="table">
-			<table>
-				<thead>
-					<tr>
-						<th style="text-align: left; min-width: 80px;">Year</th>
-						<th style="text-align: center; min-width: 500px;">
-							<svg id="headersvg" height="50" width="400"></svg>
-						</th>
-						<th style="text-align: right; min-width: 80px;">Total Damage (M)</th>
-					</tr>
-				</thead>
-				<tbody id="detailTableBody">
-				</tbody>
-			</table>
-		</div>
-	</div>
-	<script src="js/map.js"></script>
-	<script src="js/table.js"></script>
-	<script type="text/javascript">
-
-	</script>
+</script>
 </body>
 </html>
