--- a/index.html
+++ b/index.html
@@ -106,6 +106,7 @@ td {
 	<div style="text-align: center; line-height: 56px; font-size: 24px; font-weight: 600;">Global Earthquake Visualization</div>
 	<div style="text-align: center; line-height: 30px;">Kailing Fu/Yu Song</div>
 	<div style="text-align: center; line-height: 24px; font-style: italic;">Video:&nbsp<a href="https://www.youtube.com/watch?v=Chm9k_2M8nM&feature=youtu.be">Screen-cast Demo</a></div>
+	<div style="text-align: center; line-height: 24px; font-style: italic;">Process Book:&nbsp<a href="https://github.com/Kaeleen/dataviscourse-pr-earthquakevis/blob/main/ProcessBook.pdf">Click to view</a></div>
 	<div style="margin-top: 50px;">
 		Year:&nbsp
 		From&nbsp<input id="sel-year-start" class="input" type="text" placeholder="1700" />
